tests/semantic_errors/test28_3.tl
require "ifj21"

global name : function (integer)
function name   (a : string) end

function main()
end

main()
